Add Moomin to 404

--- a/src/pages/404.mdx
+++ b/src/pages/404.mdx
@@ -4,8 +4,12 @@ title: "Page not found"
 description: "Oops, you shouldn't be here."
 ---
 
+import Moomin from "@components/mdx/Moomin.astro";
+
 # Page not found
 
-Oops, you shouldn't be here.
+<Moomin which="muminek" side="left">
+  Oops, something went wrong. Silly Matthew!
+</Moomin>
 
 If you've been linked to this page from within this website, please [contact me](/#contact).
