Show off with citation

--- a/src/content/blog/build-something.mdx
+++ b/src/content/blog/build-something.mdx
@@ -37,7 +37,7 @@ was a great way to get started - I was able to build a basic layout in a few day
 by making everything a component with [Astro](https://astro.build/).
 
 <Moomin which="muminek" side="right">
-  Is that why you have perfect 100 Lighthouse scores?
+  Is that why you have [perfect 100 Lighthouse scores](https://pagespeed.web.dev/analysis/https-mattsanetra-uk/jw8rjpadx4?form_factor=mobile)?
 </Moomin>
 
 Wow, what a *shameless brag*, how __*dare*__ you. But yes.
