Add alternative email

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -38,6 +38,7 @@ In no particular order,
 ## Contact
 
 - For academic enquiries, `matthew.sanetra@cs.ox.ac.uk`
+- For encrypted or security sensitive emails, `matthew.sanetra@protonmail.com`
 - For all other emails, `matthewsanetra@gmail.com`
 - Twitter: [@mm_atthew](https://twitter.com/mm_atthew)
 - LinkedIn: [/in/mattsan](https://linkedin.com/in/mattsan)
