Update blog index

--- a/src/content/blog/build-something.mdx
+++ b/src/content/blog/build-something.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Build something!"
-description: "How I built this website"
+description: "Stumbling for two years, making in a week. I talk about how I finally got to making this website."
 date: 2023-03-14
 ---
 
