Switch to functional style to avoid bugs

--- a/src/content/blog/scheduling-on-a-budget.mdx
+++ b/src/content/blog/scheduling-on-a-budget.mdx
@@ -46,9 +46,9 @@ feature, and so I just need to make a wrapper over `getCollection("...")`:
 ```ts
 export async function entries() {
   const all = await getCollection("blog");
-  const posts = all.filter((post) => !ignore(post));
+  const filtered = all.filter((post) => !ignore(post));
 
-  posts.forEach((post) => updatePublishTime(post.data.date));
+  const posts = filtered.map((post) => withUpdatedPublishTime(post));
 
   // Make sure most recent post appears first
   posts.sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
@@ -73,7 +73,9 @@ Yep! And now we can even inject the scheduled deployment time! [^1]
 [^1]: At the time of writing this post, the time only shows up on the RSS feed.
 
 ```ts
-function updatePublishTime(date: Date) {
+function withUpdatedPublishTime(post: CollectionEntry<"blog">) {
+  const date = new Date(post.data.date);
+
   // Month index below is 0-indexed, day index is not
   if (date >= new Date(2023, 2, 15, 0, 0, 0, 0)) {
     // Since 2023-03-15, we are initiating deployment at 15:00 UTC,
@@ -84,6 +86,8 @@ function updatePublishTime(date: Date) {
     date.setUTCSeconds(0);
     date.setUTCMilliseconds(0);
   }
+
+  return { ...post, data: { ...post.data, date } };
 }
 ```
 
