Move title to frontmatter; support for overriding heading

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -4,11 +4,10 @@ title: "Matthew Sanetra"
 description: "Matthew Sanetra is a Computer Science student at Magdalen College,
   University of Oxford. This is his personal website where he writes
   about his adventures programming."
+titleHeadingOverride: "Welcome!"
 ---
 
 import Moomin from "@components/mdx/Moomin.astro";
-
-# Welcome!
 
 Hello and welcome to my website! I'm Matthew, and I'm-
 
