Update homepage description

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,9 +1,8 @@
 ---
 layout: "@layouts/BlogPost.astro"
 title: "Matthew Sanetra"
-description: "Matthew Sanetra is a Computer Science student at Magdalen College,
-  University of Oxford. This is his personal website where he writes
-  about his adventures programming."
+description: "Hello! I'm a Computer Scientist at Magdalen College, University of Oxford.
+              This is my personal blog - come join me on my adventures!"
 titleHeadingOverride: "Welcome!"
 ---
 
