Move root pages into content collections for type safety

--- a/src/content/root/404.mdx
+++ b/src/content/root/404.mdx
@@ -1,7 +1,7 @@
 ---
-layout: "@layouts/BlogPost.astro"
-title: "Page not found"
+title: "Page not found [404]"
 description: "Oops, you shouldn't be here."
+headingOverride: "Page not found"
 ---
 
 import Moomin from "@components/mdx/Moomin.astro";
