--- a/src/content/root/index.mdx
+++ b/src/content/root/index.mdx
@@ -1,9 +1,8 @@
 ---
-layout: "@layouts/BlogPost.astro"
 title: "Matthew Sanetra"
 description: "Hello! I'm a Computer Scientist at Magdalen College, University of Oxford.
               This is my personal blog - come join me on my adventures!"
-titleHeadingOverride: "Welcome!"
+headingOverride: "Welcome!"
 ---
 
 import Moomin from "@components/mdx/Moomin.astro";
