--- a/src/content/blog/scheduling-on-a-budget.mdx
+++ b/src/content/blog/scheduling-on-a-budget.mdx
@@ -2,9 +2,13 @@
 title: "Scheduled deployments on a budget"
 description: "How I added future post scheduling to my completely static website"
 date: 2023-03-16
+lastModified: 2023-03-20
 ---
 
 import Moomin from "@components/mdx/Moomin.astro";
+
+__*EDIT:*__  I no longer use cron-job.org, I instead use a custom
+Cloudflare Worker, which I published here: [deploy-worker](https://github.com/matthewsanetra/deploy-worker).
 
 I'm a big fan of [Cloudflare Pages](https://pages.dev/).
 In fact, this page is built in a limited Beta version of their containers that a Cloudflare
