Navbar list is now dynamic!

--- a/src/content/root/blog.mdx
+++ b/src/content/root/blog.mdx
@@ -2,7 +2,9 @@
 title: "Blog Posts | Matthew Sanetra"
 headingOverride: "Blog"
 description: "Browse the blog posts written by Matthew Sanetra"
-lastModified: 2023-03-17
+navbar:
+  index: 1
+  title: "Blog"
 ---
 
 import BlogList from "@components/BlogList.astro";
