--- a/src/content/root/index.mdx
+++ b/src/content/root/index.mdx
@@ -3,6 +3,9 @@ title: "Matthew Sanetra"
 description: "Hello! I'm a Computer Scientist at Magdalen College, University of Oxford.
               This is my personal blog - come join me on my adventures!"
 headingOverride: "Welcome!"
+navbar:
+  index: 0
+  title: "About"
 ---
 
 import Moomin from "@components/mdx/Moomin.astro";
