Migrate @alias to ~alias

--- a/src/content/blog/adding-comments.mdx
+++ b/src/content/blog/adding-comments.mdx
@@ -4,7 +4,7 @@ description: "Adding comments made easy with utteranc.es"
 date: 2023-03-26
 ---
 
-import Moomin from "@components/mdx/Moomin.astro";
+import Moomin from "~components/mdx/Moomin.astro";
 
 Deciding to add comments to my blog was something that took a lot of deliberation.
 I had a few reasons for not wanting to add comments to my blog:
