--- a/src/content/blog/build-something.mdx
+++ b/src/content/blog/build-something.mdx
@@ -4,7 +4,7 @@ description: "Stumbling for two years, making in a week. I talk about how I fina
 date: 2023-03-14
 ---
 
-import Moomin from "@components/mdx/Moomin.astro";
+import Moomin from "~components/mdx/Moomin.astro";
 
 Hey Muminek, I've finally got this website I've been working on published!
 
