--- a/src/content/blog/scheduling-on-a-budget.mdx
+++ b/src/content/blog/scheduling-on-a-budget.mdx
@@ -5,7 +5,7 @@ date: 2023-03-16
 lastModified: 2023-03-20
 ---
 
-import Moomin from "@components/mdx/Moomin.astro";
+import Moomin from "~components/mdx/Moomin.astro";
 
 __*EDIT:*__  I no longer use cron-job.org, I instead use a custom
 Cloudflare Worker, which I published here: [deploy-worker](https://github.com/matthewsanetra/deploy-worker).
