--- a/src/content/root/blog.mdx
+++ b/src/content/root/blog.mdx
@@ -7,6 +7,6 @@ navbar:
   title: "Blog"
 ---
 
-import BlogList from "@components/BlogList.astro";
+import BlogList from "~components/BlogList.astro";
 
 <BlogList />
