--- a/src/content/root/characters-test.mdx
+++ b/src/content/root/characters-test.mdx
@@ -3,7 +3,7 @@ title: "New Characters Test Page"
 description: "A test page for new upcoming characters!"
 ---
 
-import Char from "@components/mdx/Char.astro";
+import Char from "~components/mdx/Char.astro";
 
 <Char which="alpaca" emotion="confused">
   Elit sint Lorem veniam dolore in excepteur et fugiat adipisicing dolore est.
