Add to character test page

--- a/src/content/root/characters-test.mdx
+++ b/src/content/root/characters-test.mdx
@@ -23,11 +23,15 @@ Ad ex id esse enim ipsum in proident fugiat Lorem ex et. Nulla est enim sit amet
 
 Amet reprehenderit dolore ut amet fugiat et cillum nisi cillum occaecat consectetur adipisicing anim dolor. Dolor sit non labore esse amet anim dolor incididunt nisi. Minim esse quis ut laboris. Labore culpa Lorem ad ad ad duis id anim do et irure. Sint enim aliqua aliquip eiusmod aliqua irure duis nostrud non sint excepteur cillum.
 
+## A subheading
+
 <Char which="frog" emotion="confused">
   Elit sint Lorem veniam dolore in excepteur et fugiat adipisicing dolore est.
 </Char>
 
 Consectetur cupidatat incididunt non laborum magna do voluptate sit. Non culpa est occaecat fugiat laborum velit tempor et commodo aliqua. Proident quis consequat ea nisi incididunt.
+
+## A subheading
 
 <Char which="frog" emotion="excited">
   Minim aute aliquip sit ex non ut magna ex cillum.
@@ -55,4 +59,20 @@ Ex ad aute minim tempor voluptate sint laborum id. Nulla quis commodo laborum no
 
 <Char which="rabbit" emotion="intrigued">
   Irure minim dolor laboris et. Sint laboris laboris laboris.
+</Char>
+
+```rust
+fn main() {
+  println!("Some code, why {}?", "not");
+}
+```
+
+<Char which="alpaca" emotion="confused">
+  Elit sint Lorem veniam dolore in excepteur et fugiat adipisicing dolore est.
+</Char>
+
+Commodo voluptate Lorem est consequat amet adipisicing labore laborum ea Lorem. Dolor fugiat elit sit laborum ipsum irure ex aliqua excepteur. Et proident nulla incididunt velit dolor velit. Irure consequat ex consequat irure non fugiat in in pariatur. Do in exercitation anim fugiat adipisicing. Qui reprehenderit qui fugiat esse laboris.
+
+<Char which="alpaca" emotion="excited">
+  Quis laborum non excepteur ea voluptate laboris magna reprehenderit ad in duis minim. Occaecat dolor adipisicing voluptate ea consectetur. Occaecat in nisi cillum amet proident non esse labore.
 </Char>
