Quicker mdx component alias

--- a/src/content/blog/astro-caching.mdx
+++ b/src/content/blog/astro-caching.mdx
@@ -4,7 +4,7 @@ description: "How hashes in filenames make Astro assets 🚀"
 date: 2023-03-19
 ---
 
-import Moomin from "~components/mdx/Moomin.astro";
+import Moomin from "~mdx/Moomin.astro";
 
 When you import assets in [Astro](https://astro.build/), it does something special -
 it renames them to include a short hash and moves them to `/_astro/`.
