--- a/src/content/root/404.mdx
+++ b/src/content/root/404.mdx
@@ -4,7 +4,7 @@ description: "Oops, you shouldn't be here."
 headingOverride: "Page not found"
 ---
 
-import Moomin from "~components/mdx/Moomin.astro";
+import Moomin from "~mdx/Moomin.astro";
 
 <Moomin which="muminek" side="left">
   Oops, something went wrong. Silly Matthew!
