--- a/src/content/root/index.mdx
+++ b/src/content/root/index.mdx
@@ -8,7 +8,7 @@ navbar:
   title: "About"
 ---
 
-import Moomin from "~components/mdx/Moomin.astro";
+import Moomin from "~mdx/Moomin.astro";
 
 Hello and welcome to my website! I'm Matthew, and I'm-
 
