Migrate away from Moomins to my new characters

--- a/src/content/blog/adding-comments.mdx
+++ b/src/content/blog/adding-comments.mdx
@@ -4,7 +4,7 @@ description: "Adding comments made easy with utteranc.es"
 date: 2023-03-26
 ---
 
-import Moomin from "~mdx/Moomin.astro";
+import Char from "~mdx/Char.astro";
 
 Deciding to add comments to my blog was something that took a lot of deliberation.
 I had a few reasons for not wanting to add comments to my blog:
@@ -15,9 +15,9 @@ I had a few reasons for not wanting to add comments to my blog:
 
 __*Enter 'utteranc.es'.*__ All of the above issues have been deferred to GitHub.
 
-<Moomin which="muminek" side="right">
+<Char which="rabbit" emotion="intrigued">
   Try commenting something that breaks GitHub's terms of service!
-</Moomin>
+</Char>
 
 **No. Don't.**
 
