--- a/src/content/root/404.mdx
+++ b/src/content/root/404.mdx
@@ -4,10 +4,10 @@ description: "Oops, you shouldn't be here."
 headingOverride: "Page not found"
 ---
 
-import Moomin from "~mdx/Moomin.astro";
+import Char from "~mdx/Char.astro";
 
-<Moomin which="muminek" side="left">
+<Char which="frog" emotion="confused">
   Oops, something went wrong. Silly Matthew!
-</Moomin>
+</Char>
 
 If you've been linked to this page from within this website, please [contact me](/#contact).
