--- a/src/content/root/index.mdx
+++ b/src/content/root/index.mdx
@@ -8,15 +8,16 @@ navbar:
   title: "About"
 ---
 
-import Moomin from "~mdx/Moomin.astro";
+import Char from "~mdx/Char.astro";
 
 Hello and welcome to my website! I'm Matthew, and I'm-
 
-<Moomin which="muminek" side="right">
+<Char which="rabbit" emotion="intrigued">
   *-Hello*!
-</Moomin>
+</Char>
 
-... oh right, that's __*Muminek*__, a friend of mine. He likes to hang around.
+... oh right, that's a friend of mine. He likes to hang around.
+There are a few of them that you will meet in my [blog posts](/blog/).
 
 I'm a Computer Scientist at [Magdalen College, University of Oxford](https://www.magd.ox.ac.uk/).
 
@@ -31,9 +32,9 @@ In no particular order,
 - Rocketry
 - Typography
 
-<Moomin which="muminek" side="left">
+<Char which="alpaca" emotion="intrigued">
   So basically, he's __*boring*__.
-</Moomin>
+</Char>
 
 ## Contact
 
