--- a/src/content/blog/build-something.mdx
+++ b/src/content/blog/build-something.mdx
@@ -4,20 +4,28 @@ description: "Stumbling for two years, making in a week. I talk about how I fina
 date: 2023-03-14
 ---
 
-import Moomin from "~mdx/Moomin.astro";
+import Char from "~mdx/Char.astro";
 
-Hey Muminek, I've finally got this website I've been working on published!
+I've finally got this website I've been working on published!
 
-<Moomin which="muminek" side="right">
+<Char which="frog" emotion="excited">
+  Congrats!! How long did it take?
+</Char>
+
+{/* <Moomin which="muminek" side="right">
   Congrats! How long did it take?
-</Moomin>
+</Moomin> */}
 
 2 years. Two *whole* **years** of overthinking, overcomplicating and overengineering.
 Two __*excruciating*__ years of having a vision and not being able to follow through.
 
-<Moomin which="muminek" side="left">
+<Char which="frog" emotion="confused">
   Ouch. So what changed?
-</Moomin>
+</Char>
+
+{/* <Moomin which="muminek" side="left">
+  Ouch. So what changed?
+</Moomin> */}
 
 I became less stubborn. I stopped trying to make my own tools, I instead chose
 one framework and stuck to it. I don't need this website to build in milliseconds,
@@ -34,9 +42,9 @@ myself as a designer, but I've always been a tinkerer, and [Tailwind Play](https
 was a great way to get started - I was able to build a basic layout in a few days
 by making everything a component with [Astro](https://astro.build/).
 
-<Moomin which="muminek" side="right">
+<Char which="rabbit" emotion="excited">
   Is that why you have [perfect 100 Lighthouse scores](https://pagespeed.web.dev/analysis/https-mattsanetra-uk/jw8rjpadx4?form_factor=mobile)?
-</Moomin>
+</Char>
 
 Wow, what a *shameless brag*, how __*dare*__ you. But yes.
 
@@ -56,9 +64,9 @@ At the time of writing this,
 - still no table of contents, no reading time, etc.
 - there is only a very basic minimal RSS feed
 
-<Moomin which="muminek" side="left">
+<Char which="rabbit" emotion="intrigued">
   Should I subscribe to your RSS feed?
-</Moomin>
+</Char>
 
 That is *definitely* not why I keep repeating the words RSS feed.
 
