--- a/src/content/blog/graph-build-proposal.mdx
+++ b/src/content/blog/graph-build-proposal.mdx
@@ -127,7 +127,7 @@ Note:
  - Variables begin with `$`, more on that in the next section.
  - Special *"inserted"* variables are prefixed with `$_`.
 
-These are the only inserted rules:
+These are the only inserted variables:
  - `$_OUT`: The output filename, including file extension.
  - `$_IN`: The input filename(s), including file extension.
    - For collections, this is a space separated list of filenames.
