--- a/src/content/blog/graph-build-proposal.mdx
+++ b/src/content/blog/graph-build-proposal.mdx
@@ -48,7 +48,7 @@ echo "Aggregating files"
   So why do we need something new?
 </Char>
 
-There are a few downsides of rawdogging it with bash:
+There are a few downsides to rawdogging it with bash:
 
 - No parallelism unless you try *really really* hard.
   I'm not bothered to do it while writing this example.
