--- a/src/content/blog/adding-comments.mdx
+++ b/src/content/blog/adding-comments.mdx
@@ -24,4 +24,4 @@ __*Enter 'utteranc.es'.*__ All of the above issues have been deferred to GitHub.
 But yeah, I trust that GitHub security is good enough to keep out the spammers and trolls.
 And if they appear, anyone can report them and they'll be gone.
 
-*- Matthew*
+*-- Matthew*
