Update feed page description

--- a/src/content/root/feeds.mdx
+++ b/src/content/root/feeds.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Matthew Sanetra | Feeds"
-description: "Find the links to the various feeds for this site."
+description: "The feed links for my blog."
 headingOverride: "Feeds"
 ---
 
